Resolved bottom scrollbar issue

--- a/ProjectRailway/initstyle.css
+++ b/ProjectRailway/initstyle.css
@@ -18,7 +18,6 @@ body{
 	font-family: stencil, sans-serif;
     padding: 10px;
     color:#fff;
-	width: 100%;
 	
 }
 
